# fracform-core

./: .gitignore  Cargo.toml  README.md
src/: README.md  buddha_gpu.rs  colors.rs  compare_shadows.rs  config.rs  formula.rs  fractal.rs  frames_to_mp4.rs  gpu_engine.rs  main.rs  random_formula.rs  train.rs  ui.rs
src/fractals/: buddhabrot.rs  mandelbrot.rs  mod.rs  nebulabrot.rs
src/legacy/: config_legacy.rs  fractal_legacy.rs  main_legacy.rs
