[package]
name = "fracform_core"
version = "0.1.0"
edition = "2021"

[dependencies]
num = "0.4"
image = "0.25.1"
rayon = "1.10.0"
cached = "0.53.1"
libloading = "0.8.4"
rand = "0.9.2"
strfmt = "0.2.4"
eframe = "0.29"
regex = "1.12.2"
rand_distr = "0.5.1"
wgpu = "0.15"
pollster = "0.3"
bytemuck = "1.14"
futures-intrusive = "0.4"
once_cell = "1.21"
futures-util = "0.3"
rug = "1.23"
